# fastapi

./: .gitignore  AZURE_DEVOPS_DEPLOYMENT.md  DEPLOYMENT.md  Dockerfile  GITHUB_ACTIONS_DEPLOY.md  README.md  SETUP.md  azure-pipelines.yml  pyproject.toml
.github/workflows/: deploy-snowflake.yml  deploy-to-snowflake.yml
app/: __init__.py  main.py
app/api/v1/: __init__.py  auth.py  claims.py  policies.py
app/core/: __init__.py  config.py  logging_config.py  security.py  snowflake.py
app/models/: __init__.py  auth.py  requests.py  responses.py
app/services/: auth_service.py  claims_service.py  policy_service.py
app/utils/: query_builder.py
snowflake/: 01_setup_database.sql  02_create_tables.sql  03_create_users.sql  04_create_secure_views.sql  05_spcs_setup.sql  06_rbac_grants.sql  07_verification.sql
